internal/lang/test/testdata/errors/arithmetic_type.scampi
module main

let x = "hello" - 1
